--- a/chrome/potato-vars.css
+++ b/chrome/potato-vars.css
@@ -21,7 +21,7 @@
 
   --uc-blur-radius: 9px;
 
-  --uc-content-margin: 0.1px;
+  --uc-content-margin: 0.4px;
   --uc-sidebar-margin: 3px;
   --uc-hover-target-size: 8px;
 
